Closed
Bug 561526
Opened 14 years ago
Closed 14 years ago
e10s HTTP: fix crash from NS_RELEASE(gHttpHandler)
Categories
(Core :: Networking: HTTP, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jduell.mcbugs, Assigned: jduell.mcbugs)
References
Details
Attachments
(1 file)
1.90 KB,
patch
|
jdm
:
review+
Biesinger
:
superreview+
dwitte
:
feedback+
|
Details | Diff | Splinter Review |
NS_RELEASE nulls out gHttpHandler, causing segfaults at next use. We just want gHttpHandler->Release(). Also simplified silly copy-then_NS_RELEASE logic in child. Assigning review to jdm/dwitte. Whoever's got 30 seconds first can +r.
Attachment #441243 -
Flags: review?(josh)
Attachment #441243 -
Flags: feedback?(dwitte)
Comment 1•14 years ago
|
||
Comment on attachment 441243 [details] [diff] [review] Fixes crash Looks sensible. r=me
Attachment #441243 -
Flags: review?(josh) → review+
Comment 2•14 years ago
|
||
Comment on attachment 441243 [details] [diff] [review] Fixes crash r=dwitte
Attachment #441243 -
Flags: feedback?(dwitte) → feedback+
Updated•14 years ago
|
Attachment #441243 -
Flags: superreview+
Assignee | ||
Comment 3•14 years ago
|
||
http://hg.mozilla.org/projects/electrolysis/rev/bc5c9b9f6eee
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Assignee: nobody → jduell.mcbugs
You need to log in
before you can comment on or make changes to this bug.
Description
•