Bug 561526: NS_RELEASE nulls out gHttpHandler, causing segfaults at next use.  r=dwitte,jdm sr=biesi